--- a/LandingPage/assets/styles/styles.css
+++ b/LandingPage/assets/styles/styles.css
@@ -8,3 +8,32 @@
 a{
     color: unset;
 }
+header{
+    background-image:url('../images/hero.png');
+    background-position: center;
+    background-size: cover;
+    height: 60vh;
+    
+}
+/*Navbar styles*/
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 0px;
+    flex-direction: row;
+    width: 90%;
+    align-items: center;
+    margin: 0px auto;
+}
+nav .nav-item{
+    color: white;
+    margin: 0px 10px;
+}
+nav div.container{
+    display: flex;
+    flex-direction: row;
+}
+nav div.nav-item.app{
+    font-size: 0.9rem;
+    font-weight: 900;
+}
