--- a/LandingPage/assets/styles/styles.css
+++ b/LandingPage/assets/styles/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: Metropolis;
+    border: none;
+}
+*:focs{
+    outline: none;
+    border: none;
 }
 a{
     color: unset;
@@ -36,4 +41,58 @@ nav div.container{
 nav div.nav-item.app{
     font-size: 0.9rem;
     font-weight: 900;
+}
+header div.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 70%;
+    width: 80%;
+    margin: 0px auto;
+}
+header img.logo{
+    width: 300px;
+    
+}
+header h1{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 400;
+}
+header div.search-box i{
+    margin: 10px;
+}
+header div.search-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    width: 70%;
+    border-radius: 10px;
+    
+}
+header div.search-box div.select i{
+    color: #F57082;
+}
+header div.search-box div.input i{
+    color:#828282b7;
+}
+header div.search-box div.seperator{
+    height: 50%;
+    background-color:#828282b7 ;
+    width: 2px;
+}
+header div.search-box div.input{
+    flex-grow: 80;
+}
+header div.search-box div.input input{
+    width: 100%;
+    font-size: 1em;
+}
+div.search-box div{
+    display: flex ;
+    align-items: center;
+    height: 50px;
+    margin: 0px 50px;
 }
