--- a/LandingPage/assets/styles/styles.css
+++ b/LandingPage/assets/styles/styles.css
@@ -96,3 +96,36 @@ div.search-box div{
     height: 50px;
     margin: 0px 50px;
 }
+
+/*header section complete*/
+
+/*Nearby section*/
+
+
+section.nearby div.container{
+    width: 90%;
+    margin: 0px auto;
+    
+    text-align: center;
+    padding: 40px 0px;
+}
+section.nearby div.container h3{
+    font-size: 2.2rem;
+    font-weight: unset;
+}
+section.nearby div.box{
+    max-width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 15px;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    margin-top: 5% ;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+section.nearby div.box:hover{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    cursor: pointer;
+}
+
