--- a/LandingPage/assets/styles/styles.css
+++ b/LandingPage/assets/styles/styles.css
@@ -128,4 +128,20 @@ section.nearby div.box:hover{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     cursor: pointer;
 }
+section.app{
+     min-height: 300px;
+    background-color: #FEFBF6;
+
+}
+section.app div.container{
+    width: 70%;
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+section.app div.container img{
+    display: block;
+    max-width: 300px;
+}
 
