Options section complete

--- a/LandingPage/assets/styles/styles.css
+++ b/LandingPage/assets/styles/styles.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: Metropolis;
+    font-family: Helvetica, sans-serif;
     border: none;
 }
 *:focs{
@@ -191,14 +191,45 @@ section.app div.input button{
     font-weight: 100;
 }
 
-section.app div.form div.download{
-    margin: 20px 0px;
+section.app div.container div.form div.download{
+    margin: 20px 10px;
     font-weight: 100;
     color :grey;
 }
 
-section.app div.form div.download div.img{
+section.app div.container div.form div.download div.img img{
     max-width: 150px;
     display: inline-block;
     margin: 5px 5px;
 }
+
+section.options div.container{
+    width: 90%;
+    margin: 30px auto;
+    /* align-items: center; */
+    margin: 5%;
+}
+section.options div.container h2{
+    font-size:2rem;
+}
+section.options div.container h3{
+    font-size: 2rem;
+}
+section.options div.container div{
+    margin-top: 40px;
+}
+section.options div.container div ul{
+    margin-top: 20px;
+    padding: 20px;
+    display: flex !important ;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+section.options div.container div ul li{
+    margin: 3px 10px;
+    color: grey !important;
+    font-size: 1.1rem;
+    font-weight: 100;
+}
+
+
